src/objects/Cricket_Feedback__c.object
<CustomObject>
    <description>Stores Cricket Feedbacks for App.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Fdbck Comments</description>
        <inlineHelpText>Fdbck Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cricket_Team_Owner__c</fullName>
        <description>Cricket Team Owner</description>
        <inlineHelpText>Cricket Team Owner</inlineHelpText>
        <label>Cricket Team Owner</label>
        <referenceTo>Cricket_Team__c</referenceTo>
        <relationshipLabel>Cricket Feedbacks</relationshipLabel>
        <relationshipName>Cricket_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExpresssionForRating__c</fullName>
        <description>ExpresssionForRating</description>
        <formula>CASE(Rating__c,5, &apos;Awesome&apos;,
               4, &apos;Nice&apos;,
               3, &apos;Good&apos;,
               2, &apos;Okay&apos;,&apos;Yuck&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ExpresssionForRating</inlineHelpText>
        <label>ExpresssionForRating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes scores 1-5</description>
        <inlineHelpText>Denotes scores 1-5</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cricket Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Cricket Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>